Update Docker File