@@ -1,19 +1,70 @@
-# ---- Build stage ----
-FROM maven:3.9.9-eclipse-temurin-17 AS build
+# First stage, package the app and build the custom JRE
+FROM eclipse-temurin:17-jdk-alpine AS jre-builder
+
+RUN mkdir /opt/app
+COPY . /opt/app
+
+WORKDIR /opt/app
+
+ENV MAVEN_VERSION 3.6.3
+ENV MAVEN_HOME /usr/lib/mvn
+ENV PATH $MAVEN_HOME/bin:$PATH
+ENV APP_JAR_NAME chronologix-0.0.1-SNAPSHOT.jar
+
+RUN apk update && \
+    apk add --no-cache tar binutils
+
+
+RUN wget "http://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz" && \
+  tar -zxvf "apache-maven-${MAVEN_VERSION}-bin.tar.gz" && \
+  rm "apache-maven-${MAVEN_VERSION}-bin.tar.gz" && \
+  mv "apache-maven-${MAVEN_VERSION}" /usr/lib/mvn
+
+RUN mvn package -DskipTests
+RUN jar xvf "target/${APP_JAR_NAME}"
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 17  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    "target/${APP_JAR_NAME}" > modules.txt
+
+# Build small JRE image
+RUN "${JAVA_HOME}"/bin/jlink \
+         --verbose \
+         --add-modules $(cat modules.txt) \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /optimized-jdk-17
+
+
+# Second stage, Use the custom JRE and build the app image
+FROM alpine:3.19
+ENV JAVA_HOME=/opt/jdk/jdk-17
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=jre-builder /optimized-jdk-17 $JAVA_HOME
+
+# Add app user
+ARG APPLICATION_USER=spring
+
+# Create a user to run the application, don't run as root
+RUN addgroup --system "${APPLICATION_USER}" \  
+    && adduser --system "${APPLICATION_USER}" --ingroup "${APPLICATION_USER}" \
+    && mkdir /app \
+    && chown -R "${APPLICATION_USER}" /app
+
+# Create the application directory
+# RUN mkdir /app && chown -R "${APPLICATION_USER}" /app
+
+COPY --chown="${APPLICATION_USER}:${APPLICATION_USER}" target/*.jar /app/app.jar
+
 WORKDIR /app
-COPY . .
-RUN mvn clean package -DskipTests
 
-# ---- Runtime stage ----
-FROM eclipse-temurin:17-jre-alpine
-WORKDIR /app
+USER "${APPLICATION_USER}"
 
-# Create a non-root user for security
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring
-
-# Copy only the JAR to keep final image light
-COPY --from=build /app/target/*.jar app.jar
-
-# Optional: Container-aware JVM flags
-ENTRYPOINT ["java","-XX:+UseContainerSupport","-XX:MaxRAMPercentage=75.0","-jar","app.jar"]
+EXPOSE 8080
+ENTRYPOINT [ "java", "-jar", "/app/app.jar" ]
